--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=5e6e7880826b47aab4fdf2baf4c70559
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://p1806493:369339@iutdoua-web.univ-lyon1.fr/p1806493
+DATABASE_URL=mysql://root:@127.0.0.1/cpoa
 ###< doctrine/doctrine-bundle ###
